# django-live-dashboard

./: README.md  pyproject.toml
django_live_dashboard/: asgi.py  conf.py  middleware.py  urls.py  views.py  websocket.py
django_live_dashboard/templates/django_live_dashboard/: monitoring.html
example_project/: manage.py
example_project/project/: asgi.py  settings.py  urls.py
