[tool.poetry]
name = "django-live-dashboard"
version = "0.1.0"
description = ""
authors = ["Adam Hill <ahill@fool.com>"]

[tool.poetry.dependencies]
python = "^3.6"
hiredis = "^1.0.1"
aioredis = "^1.3.1"
django = "^3.0.5"
orjson = "^2.6.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
